[tool.poetry]
name = "crypto-trading-bot"
version = "0.1.0"
description = "A cryptocurrency trading bot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^1.7.3"
python-dotenv = "^0.19.0"
coinbase-advanced-py = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
flask = "^2.0.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 